--- a/stable_diffusion_videos.ipynb
+++ b/stable_diffusion_videos.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/alabaster246/Test/blob/main/stable_diffusion_videos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "id": "Xwfc0ej1L9A0"
       },
@@ -74,37 +74,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
-        "id": "bgSNS368L-DV",
-        "outputId": "c4910173-7ff9-47e4-a378-fb40dc04d3b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 383
-        }
+        },
+        "id": "bgSNS368L-DV",
+        "outputId": "c4910173-7ff9-47e4-a378-fb40dc04d3b7"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'stable_diffusion_videos'",
+          "evalue": "No module named 'torch'",
+          "output_type": "error",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1756382933.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_diffusion_videos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mInterface\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_diffusion_videos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstable_diffusion_pipeline\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mStableDiffusionWalkPipeline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'stable_diffusion_videos'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mstable_diffusion_videos\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mapp\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Interface\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mstable_diffusion_videos\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstable_diffusion_pipeline\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StableDiffusionWalkPipeline\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'torch'"
+          ]
         }
       ],
       "source": [
@@ -214,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "GqTWc8ZhNeLU"
       },
@@ -244,21 +233,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "Hv2wBZXXMQ-I"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'pipeline' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m video_path = \u001b[43mpipeline\u001b[49m.walk(\n\u001b[32m      2\u001b[39m     input_path=\u001b[33m\"\u001b[39m\u001b[33mphoto.png\u001b[39m\u001b[33m\"\u001b[39m,     \u001b[38;5;66;03m# путь к твоему фото\u001b[39;00m\n\u001b[32m      3\u001b[39m     fps=\u001b[32m15\u001b[39m,                     \u001b[38;5;66;03m# кадров в секунду\u001b[39;00m\n\u001b[32m      4\u001b[39m     num_frames=\u001b[32m20\u001b[39m,              \u001b[38;5;66;03m# длина видео (14–25 оптимально)\u001b[39;00m\n\u001b[32m      5\u001b[39m     motion_bucket_id=\u001b[32m90\u001b[39m,        \u001b[38;5;66;03m# сила движения (40–200)\u001b[39;00m\n\u001b[32m      6\u001b[39m     output_path=\u001b[33m\"\u001b[39m\u001b[33moutput.mp4\u001b[39m\u001b[33m\"\u001b[39m    \u001b[38;5;66;03m# имя файла для сохранения\u001b[39;00m\n\u001b[32m      7\u001b[39m )\n\u001b[32m      9\u001b[39m visualize_video_colab(\u001b[33m\"\u001b[39m\u001b[33moutput.mp4\u001b[39m\u001b[33m\"\u001b[39m)\n",
+            "\u001b[31mNameError\u001b[39m: name 'pipeline' is not defined"
+          ]
+        }
+      ],
       "source": [
         "video_path = pipeline.walk(\n",
-        "    ['a cat', 'a dog'],\n",
-        "    [42, 1337],\n",
-        "    fps=30,                      # use 5 for testing, 25 or 30 for better quality\n",
-        "    num_interpolation_steps=5,  # use 3-5 for testing, 30 or more for better results\n",
-        "    height=512,                 # use multiples of 64 if > 512. Multiples of 8 if < 512.\n",
-        "    width=512,                  # use multiples of 64 if > 512. Multiples of 8 if < 512.\n",
+        "    input_path=\"photo.png\",     # путь к твоему фото\n",
+        "    fps=15,                     # кадров в секунду\n",
+        "    num_frames=20,              # длина видео (14–25 оптимально)\n",
+        "    motion_bucket_id=90,        # сила движения (40–200)\n",
+        "    output_path=\"output.mp4\"    # имя файла для сохранения\n",
         ")\n",
-        "visualize_video_colab(video_path)"
+        "\n",
+        "visualize_video_colab(\"output.mp4\")"
       ]
     },
     {
@@ -274,48 +275,48 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%capture\n",
-        "! pip install youtube-dl"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "302zMC44aiC6"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%%capture\n",
+        "! pip install youtube-dl"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Then, we can download an example music file. Here we download one from my soundcloud:"
-      ],
       "metadata": {
         "id": "Q3gCLCkLanzO"
-      }
+      },
+      "source": [
+        "Then, we can download an example music file. Here we download one from my soundcloud:"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "! youtube-dl -f bestaudio --extract-audio --audio-format mp3 --audio-quality 0 -o \"music/thoughts.%(ext)s\" https://soundcloud.com/nateraw/thoughts"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "rEsTe_ujagE5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "! youtube-dl -f bestaudio --extract-audio --audio-format mp3 --audio-quality 0 -o \"music/thoughts.%(ext)s\" https://soundcloud.com/nateraw/thoughts"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RIKA-l5la28j"
+      },
+      "outputs": [],
       "source": [
         "from IPython.display import Audio\n",
         "\n",
         "Audio(filename='music/thoughts.mp3')"
-      ],
-      "metadata": {
-        "id": "RIKA-l5la28j"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -353,9 +354,9 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
       "gpuType": "T4",
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -371,7 +372,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.13.7"
     },
     "vscode": {
       "interpreter": {
